# PDE

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: build.yml  cd.yml  ci.yml
alembic/: env.py
alembic/versions/: 20260123_000000_initial_schema.py
benchmarks/: python_vs_cpp.py
config/: default.json
deploy/docker/: Dockerfile.api  Dockerfile.base  Dockerfile.calibration  Dockerfile.data-ingestion  Dockerfile.execution  Dockerfile.signals  docker-compose.yml
deploy/docker/grafana/provisioning/datasources/: datasources.yml
deploy/docker/init-scripts/timescaledb/: 01-init.sql
deploy/docker/nginx/: nginx.conf
deploy/docker/prometheus/: prometheus.yml
deploy/helm/quant-trading/: Chart.yaml  values.yaml
deploy/helm/quant-trading/templates/: _helpers.tpl  api-deployment.yaml  secrets.yaml
deploy/k8s/base/: api-deployment.yaml  calibration-deployment.yaml  configmaps.yaml  data-ingestion-deployment.yaml  execution-deployment.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  rbac.yaml  redis-statefulset.yaml  secrets.yaml  signals-deployment.yaml  timescaledb-statefulset.yaml
deploy/k8s/overlays/dev/: kustomization.yaml
deploy/k8s/overlays/prod/: kustomization.yaml
deploy/scripts/: backup.sh  restore.sh
docs/: BUILD.md  DATABASE_RECOVERY.md  DEVELOPMENT.md  PYTHON_CPP_API.md  bibliography.md  design-doc.md  getting-started.md
docs/api/: openapi.yaml  rest-api.md
docs/architecture/: component-diagram.md  data-flow.md  system-overview.md  technology-stack.md
docs/database/: schema.md
docs/deployment/: kubernetes.md
docs/development/: setup.md
docs/models/: heston-model.md  ou-process.md  sabr-model.md
docs/operations/runbooks/: incident-response.md
scripts/: backup_database.sh  run.sh  setup.sh  setup_database.sh  smoke_test.sh
sql/: schema.sql
src/cpp/: CMakeLists.txt
src/cpp/bindings/: heston_bindings.cpp  ou_bindings.cpp  pde_bindings.cpp  quant_cpp.cpp  sabr_bindings.cpp
src/cpp/core/: math_utils.cpp  math_utils.hpp  matrix_utils.hpp
src/cpp/models/: heston.cpp  heston.hpp  ou_process.cpp  ou_process.hpp  sabr.cpp  sabr.hpp
src/cpp/solvers/: black_scholes_pde.hpp  heston_pde.hpp  hjb_solver.hpp  pde_core.hpp
src/python/quant_trading/: __init__.py  cli.py  config.py  trading_system.py
src/python/quant_trading/backtesting/: __init__.py  analysis.py  data_handler.py  engine.py  events.py  execution.py  multi_strategy.py  portfolio.py  rolling_optimizer.py  sector_optimizer.py  sector_portfolio.py  strategy.py
src/python/quant_trading/calibration/: __init__.py  heston_calibrator.py  orchestrator.py  ou_fitter.py  sabr_calibrator.py
src/python/quant_trading/cpp/: __init__.py  quant_cpp.pyi
src/python/quant_trading/data/: __init__.py  alternative.py  api.py  ingestion.py  monitoring.py  options.py  providers.py  recovery.py  reference.py  storage.py  streaming.py  validation.py
src/python/quant_trading/database/: __init__.py  config.py  db.py  models.py
src/python/quant_trading/execution/: __init__.py  algorithms.py  broker.py  emergency.py  order.py  order_manager.py  reconciliation.py  routing.py  tca.py
src/python/quant_trading/models/: __init__.py  heston.py  ou_process.py  sabr.py
src/python/quant_trading/monitoring/: __init__.py  alerts.py  attribution.py  dashboards.py  diagnostics.py  health.py  logging.py  metrics.py  runbooks.py
src/python/quant_trading/risk/: __init__.py  correlation_monitor.py  drawdown_controller.py  greeks_monitor.py  position_sizer.py  risk_manager.py  var_calculator.py
src/python/quant_trading/signals/: __init__.py  aggregator.py  mean_reversion.py  vol_surface_arbitrage.py
src/python/quant_trading/validation/: __init__.py  benchmarks.py  model_validation.py  statistical_tests.py  stress_testing.py  walk_forward.py
tests/cpp/: CMakeLists.txt  test_heston.cpp  test_math_utils.cpp  test_ou_process.cpp  test_sabr.cpp
tests/python/: conftest.py  test_cpp_bindings.py  test_import.py
tests/python/backtesting/: test_backtesting.py
tests/python/calibration/: test_calibration.py
tests/python/data/: __init__.py  test_data_pipeline.py
tests/python/database/: test_database.py
tests/python/deployment/: __init__.py  test_deployment.py
tests/python/documentation/: __init__.py  test_documentation.py
tests/python/execution/: test_execution.py
tests/python/monitoring/: test_monitoring.py
tests/python/risk/: test_risk.py
tests/python/signals/: test_signals.py
tests/python/validation/: test_validation.py
